K8s-Details/k8s-security/k8s-network-policy/network-project-using-kind-calico/backend.yaml
## backend.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: nginx

        ports:
        - containerPort: 80
