K8s-Details/k8s-security/k8s-network-policy/network-project-using-kind-calico/db.yaml
## db.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: db

spec:
  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
      - name: mysql
        image: mysql:8

        ports:
        - containerPort: 3306
