K8s-Details/k8s-security/k8s-network-policy/network-project-using-kind-calico/frontend.yaml
## frontend.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: nginx

        ports:
        - containerPort: 80
