K8s-Details/k8s-security/k8s-network-policy/network-project-using-kind-calico/network-policy.yaml
## network-policy.yaml


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-backend-db

spec:
  podSelector:
    matchLabels:
      app: db

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend

    ports:
    - protocol: TCP
      port: 3306
